# VisionInfer

./: LICENSE  README.md  install_deps.sh  pyproject.toml
vinfer/: __init__.py  cli.py  constants.py  frame_processing.py  frame_producer.py  inference_core.py  input_listener.py  main.py  motion_detection.py  resolution_cache.py  utils.py
vinfer/backend/: ollama_manager.py  yolo_manager.py
vinfer/camera/: rtsp_camera.py  usb_camera.py
